# sigym4-dimension

./: .gitmodules  .travis.yml  README.md  default.nix  log_tests  sigym4-dimension.cabal  tests_fallan
Sigym4/: Dimension.hs  Dimension.lhs
Sigym4/Dimension/: CronSchedule.hs  Time.lhs  Types.hs  Types.lhs
bench/: Main.hs
src/Sigym4/: Dimension.hs
src/Sigym4/Dimension/: CronSchedule.hs  Time.hs  Types.hs
tests/Sigym4/: DimensionSpec.hs
tests/Sigym4/Dimension/: CronScheduleSpec.hs
