name:                sigym4-dimension
version:             0.1.0.0
synopsis:            Dimension types
-- description:         
homepage:            http://github/meteogrid/sigym4-dimension
license:             LGPL
license-file:        LICENSE
author:              Alberto Valverde
maintainer:          alberto@meteogrid.com
copyright:           2014 Meteogrid
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:   Sigym4.Dimension
                   , Sigym4.Dimension.Types
                   , Sigym4.Dimension.Time
                   , Sigym4.Dimension.CronSchedule
  -- other-extensions:    
  build-depends:     base >=4.7 && <5
                   , monad-loops
                   , mtl
                   , attoparsec
                   , containers
                   , cron
                   , time
                    
  -- hs-source-dirs:      
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror
                     -fwarn-incomplete-patterns
                     -fwarn-incomplete-uni-patterns
                     -funbox-strict-fields
                     -O2

test-suite main
  type:              exitcode-stdio-1.0
  build-depends:     base
                   , time
                   , cron
                   , hspec
                   , QuickCheck
                   , attoparsec
                   , containers
                   , sigym4-dimension
  hs-source-dirs:    tests
  main-is:           Spec.hs
  default-language:  Haskell2010
  ghc-options:       -Wall -O2
