name:                sigym4-dimension
version:             0.1.0.2
synopsis:            Dimension types
description:         Dimension types
homepage:            http://github/meteogrid/sigym4-dimension
license:             BSD3
license-file:        LICENSE
author:              Alberto Valverde
maintainer:          alberto@meteogrid.com
copyright:           2014-2015 Alberto Valverde Gonzalez
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type:              git
  location:          https://github.com/meteogrid/sigym4-dimension


library
  exposed-modules:   Sigym4.Dimension
                   , Sigym4.Dimension.Types
                   , Sigym4.Dimension.Time
                   , Sigym4.Dimension.CronSchedule
  -- other-extensions:    
  build-depends:     base >=4.6 && <5
                   , monad-loops
                   , mtl
                   , attoparsec
                   , containers
                   , deepseq
                   , cron
                   , time
                    
  -- hs-source-dirs:      
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -fwarn-incomplete-patterns
                     -fwarn-incomplete-uni-patterns
                     -funbox-strict-fields

test-suite test
  type:              exitcode-stdio-1.0
  build-depends:     base
                   , time
                   , cron
                   , hspec
                   , QuickCheck
                   , attoparsec
                   , containers
                   , sigym4-dimension
  hs-source-dirs:    tests
  main-is:           Spec.hs
  default-language:  Haskell2010
  ghc-options:       -Wall

benchmark bench
  type:              exitcode-stdio-1.0
  hs-source-dirs:    bench
  main-is:           Main.hs
  build-depends:     base
                   , containers
                   , time
                   , cron
                   , attoparsec
                   , sigym4-dimension
                   , deepseq
                   , criterion
  default-language:  Haskell2010
  ghc-options:      -Wall
