name:                sigym4-dimension
version:             0.1.0.3
synopsis:            Dimension types
description:         Dimension types
homepage:            http://github/meteogrid/sigym4-dimension
license:             BSD3
license-file:        LICENSE
author:              Alberto Valverde
maintainer:          alberto@meteogrid.com
copyright:           2014-2016 Alberto Valverde Gonzalez
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type:              git
  location:          https://github.com/meteogrid/sigym4-dimension


library
  exposed-modules:   Sigym4.Dimension
                   , Sigym4.Dimension.Types
                   , Sigym4.Dimension.Time
                   , Sigym4.Dimension.CronSchedule
  hs-source-dirs:    src
  -- other-extensions:    
  build-depends:     base >=4.6 && <5
                   , monad-loops
                   , mtl
                   , text
                   , attoparsec
                   , bytestring
                   , containers
                   , deepseq
                   , iso8601-duration
                   , time
                   , cron
                   , template-haskell
                   , newtype
                    
  -- hs-source-dirs:      
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -fwarn-incomplete-patterns
                     -fwarn-incomplete-uni-patterns
                     -funbox-strict-fields

test-suite test
  type:              exitcode-stdio-1.0
  build-depends:     base
                   , time
                   , hspec
                   , QuickCheck
                   , attoparsec
                   , containers
                   , iso8601-duration
                   , newtype
                   , cron
                   , sigym4-dimension
  other-modules:     Sigym4.DimensionSpec
  hs-source-dirs:    tests
  main-is:           Spec.hs
  default-language:  Haskell2010
  ghc-options:       -Wall

benchmark bench
  type:              exitcode-stdio-1.0
  hs-source-dirs:    bench
  main-is:           Main.hs
  build-depends:     base
                   , containers
                   , time
                   , attoparsec
                   , sigym4-dimension
                   , deepseq
                   , criterion
  default-language:  Haskell2010
  ghc-options:      -Wall
